fix header  text alignment

--- a/tutorindigo/templates/indigo/lms/static/sass/extra/_header.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/extra/_header.scss
@@ -64,13 +64,16 @@ header.global-header {
                 a {
                     align-content: center !important;
                     margin-left:30px;
-                    height: 75px !important;
-                    padding: 35px;
+                    // height: 75px !important;
+                    font-size: 18px !important;
+                    line-height: 2.5 !important;
+                    padding: 25px;
                     color: black;
                     border-bottom: 2px solid transparent !important;
                     &:hover {
                         color: white;
                         background-color: #134223 !important;
+                    
                     }
                 }
                 .discover-new-link {
